--- a/TIL002.md
+++ b/TIL002.md
@@ -1,5 +1,9 @@
 # 목차
-1. 깃허브 홈페이지
-   *  로그인
-   *  마이 프로필 접속
-   *  레파지토리스 생성
+### 1. 깃허브 홈페이지
+*  로그인
+*  마이 프로필 접속
+*  레파지토리스 생성
+### 2. VSCode 사용
+*  디렉토리 생성
+*  임의의 위치에서 접속
+*  로컬 저장소와 원격 저장소 연결
