--- a/TIL002.md
+++ b/TIL002.md
@@ -7,3 +7,11 @@
 *  디렉토리 생성
 *  임의의 위치에서 접속
 *  로컬 저장소와 원격 저장소 연결
+
+***
+
+## 1. [깃허브 홈페이지](https://github.com/)
+>1. 위의 링크를 타고 들어가 로그인한다.
+>2. 마이 프로필에 들어간다.
+>3. 아래 그림을 보고 레파지토리 생성
+>>![레파지토리](C:\Users\solph\Desktop\수업\특강\033.jpg)
