챕터2 명령어

--- a/TIL002.md
+++ b/TIL002.md
@@ -11,7 +11,29 @@
 ***
 
 ## 1. [깃허브 홈페이지](https://github.com/)
->1. 위의 링크를 타고 들어가 로그인한다.
->2. 마이 프로필에 들어간다.
+>1. 위의 링크를 타고 들어가 로그인
+>2. 마이 프로필에 접속
 >3. 아래 그림을 보고 레파지토리 생성
 >>![레파지토리](C:\Users\solph\Desktop\수업\특강\033.jpg)
+
+***
+
+## 2. VSCode 사용
+* 디렉토리 생성
+>  1. cmd 창에서 "cd ~" 명령어로 home으로 위치
+>  2. "pwd" 명령어로 위치 파악하고 "cd 디렉토리명"으로 원하는 위치로 이동
+>  3. 위치 파악하고 원하는 위치로 이동했을시 "mkdir 디렉토리명" 으로 디렉토리 생성
+* 임의의 위치에서 접속
+>  1. 생성된 or 기존의 디렉토리에서 마우스 우클릭으로 "Code로 열기" 클릭
+>  2. VSCode 에서 터미널을 켠다
+>  3. 터미널 창에 "pwd" 명령어로 원하는 위치에 있는지 확인
+* 로컬 저장소와 원격 저장소 연결
+>  1. "git init" 명령어로 현재 위치한 디렉토리를 git으로 관리
+>  2. "git status"
+>  4. "git log " 커밋의 내역을 조회
+>> * 옵션
+>>      * --oneline : 한줄로 축약
+>>      * --graph   : 브랜치와 머지 내역을 그래프로 표현
+>>      * --all     : 현재 브랜치를 포함한 모든 브랜치의 내역을 표현 
+
+
